Fix box outline color on Safari renders

--- a/components/Construction/Construction.module.scss
+++ b/components/Construction/Construction.module.scss
@@ -1,5 +1,6 @@
 .under_construction {
     text-align: center;
+    padding-bottom: 1rem;
 }
 
 .white{
