--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -38,10 +38,5 @@
   .footer__container {
     margin-right: 3rem;
     margin-left: 3rem;
-
-    & a > {
-      margin-left: 0.20rem;
-      margin-right: 0.20rem;
-    }
   }
 }
